--- a/spring-jpa/src/main/resources/application.yaml
+++ b/spring-jpa/src/main/resources/application.yaml
@@ -12,3 +12,5 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: validate
+  liquibase:
+    change-log: 'classpath:db-migrations/changelog.xml'
