Added RESTful api and Swagger

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>spring-core</module>
         <module>spring-database</module>
         <module>spring-jpa</module>
+        <module>spring-web</module>
     </modules>
 
 </project>
