--- a/spring-web/src/main/resources/application.yaml
+++ b/spring-web/src/main/resources/application.yaml
@@ -18,3 +18,7 @@ springdoc:
   swagger-ui:
     path: /swagger-ui.html
   packages-to-scan: ru.itmo.web.controller
+
+app:
+  jwt:
+    secret: theSecretLengthMustBeAtLeast256Bits
